[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PgfPlotter"
version = "0.0.1"
authors = [
  { name="Niels Fardeau", email="niels.fardeau@gmail.com" },
]
description = "A tool to generate LaTeX PGF code from Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GNU General Public License v3.0",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "csv",
    "os",
    "codecs",
]

[project.urls]
"Homepage" = "https://github.com/ArthKuntz/PgfPlotter"
"Bug Tracker" = "https://github.com/ArthKuntz/PgfPlotter/issues"